# 2dviewer-wasm

./: CMakeLists.txt  LICENSE  README.md  serve.py  testdata.txt
.github/workflows/: build.yml
H2Geometry/: CMakeLists.txt
css/: style.css
lib/: gobject_parser.cpp  gobject_parser.h  viewport_command.h  vm.cpp
m2vlang/: CMakeLists.txt  common.h  parser.cpp  parser.h  vm.cpp  vm_object.cpp
m2vlang/test/: CMakeLists.txt  parser.cpp
scripts/: main.js
src/: canvas_layer.cpp  canvas_layer.h  commit.h  common.h  gobject.h  gobject_parser.cpp  gobject_parser.h  index.html  main.c  main.cpp  viewport.cpp  viewport.h  vm.cpp  vm.h  vm_object.h
test/: CMakeLists.txt  parser.cpp
wasm-canvas/: canvas.c
